--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html{
-    font-family: '__Poppins_775641' !important;
+    font-family: '__Poppins_dd609f' !important;
 }
 
 ::-webkit-scrollbar {
@@ -375,12 +375,19 @@ section{
 .swiper-pagination-bullets{
     bottom: -5px !important;
 }
-.ant-drawer-title{
-    @apply sm:!text-xl
-}
-.ant-drawer-body{
-    @apply sm:!px-4 sm:!py-3 !py-1 !px-2
-}
-.ant-drawer-content-wrapper{
-    @apply !h-fit  sm:top-1/3 !shadow-none
-}
+
+.ribbon-2 {
+    --f: 10px; /* control the folded part*/
+    --r: 15px; /* control the ribbon shape */
+    --t: 5px; /* the top offset */
+    
+    position: absolute;
+    inset: var(--t) calc(-1*var(--f)) auto auto;
+    padding: 0 10px var(--f) calc(10px + var(--r));
+    clip-path: 
+      polygon(0 0,100% 0,100% calc(100% - var(--f)),calc(100% - var(--f)) 100%,
+        calc(100% - var(--f)) calc(100% - var(--f)),0 calc(100% - var(--f)),
+        var(--r) calc(50% - var(--f)/2));
+    background: #BD1550;
+    box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
+  }
