--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html{
-    font-family: '__Poppins_dd609f' !important;
+    font-family: '__Poppins_775641' !important;
 }
 
 ::-webkit-scrollbar {
@@ -391,3 +391,7 @@ section{
     background: #BD1550;
     box-shadow: 0 calc(-1*var(--f)) 0 inset #0005;
   }
+
+  .scrollbar-thin {
+    scrollbar-width: thin;
+}
